# Accoutrement

./: .gitmodules  CMakeLists.txt  README.md
Accoutrement/: CMakeLists.txt
Accoutrement/src/: ChannelSelector.hpp  Config.cpp  Config.hpp  Main.cpp
Accoutrement/src/Discord/: Bot.cpp
Accoutrement/src/UI/: ChannelSelector.cpp  ChannelSelector.hpp  MainWindow.cpp  MainWindow.hpp
Bot/: CMakeLists.txt
Bot/include/Bot/: Behaviour.hpp  Bot.hpp  Error.hpp  Heartbeater.hpp  Intent.hpp  Snowflake.hpp
Bot/include/Bot/Entities/: Channel.hpp  Guild.hpp
Bot/include/Bot/Events/: GuildCreateEvent.hpp  ReadyEvent.hpp
Bot/src/: Bot.cpp  Gateway.cpp  Gateway.hpp  Heartbeat.hpp  Heartbeater.cpp  Snowflake.cpp  TLSSocket.cpp  TLSSocket.hpp  TLSSocket.inl
Bot/src/Entities/: Channel.cpp  Guild.cpp
Bot/src/Events/: GuildCreateEvent.cpp
Bot/test/: Main.cpp
Codec/: CMakeLists.txt
Codec/include/Codec/: AudioFile.hpp  Decoder.hpp  Frame.hpp  Muxer.hpp  OpusEncoder.hpp  Packet.hpp  Resampler.hpp  Sample.hpp  SodiumEncrypter.hpp
Codec/src/: AudioFile.cpp  Decoder.cpp  Frame.cpp  Muxer.cpp  OpusEncoder.cpp  Packet.cpp  Resampler.cpp  Sample.cpp  SodiumEncrypter.cpp
Codec/test/: Main.cpp
Util/: CMakeLists.txt
Util/include/Util/: Assert.hpp  Base64.hpp  Clock.hpp  Concepts.hpp  Endian.hpp  Macros.hpp  Mutex.hpp  Option.hpp  Result.hpp  Utilities.hpp
Util/include/Util/Math/: Math.hpp
Util/include/Util/Net/: Socket.cpp  Socket.hpp  Socket.inl  TCPClient.hpp  TLSClient.hpp  TLSSocket.hpp  UDPClient.hpp
Util/include/Util/Net/HTTP/: HTTPChunkedPayload.hpp  HTTPClient.hpp  HTTPClient.inl  HTTPConstants.hpp  HTTPHeader.hpp  HTTPPayload.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HTTPSimplePayload.hpp
Util/include/Util/Net/Socket/: Socket.hpp  Socket.inl  TCPClient.hpp  TLSClient.hpp  UDPClient.hpp
Util/include/Util/Net/Websocket/: WebsocketClient.hpp  WebsocketClient.inl  WebsocketMessage.hpp
Util/src/: Base64.cpp  Clock.cpp
Util/src/Net/: TCPClient.cpp  TLSClient.cpp  TLSSocket.cpp  UDPClient.cpp
Util/src/Net/HTTP/: HTTPChunkedPayload.cpp  HTTPConstants.cpp  HTTPHeader.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPSimplePayload.cpp
Util/src/Net/Socket/: Socket.cpp  TCPClient.cpp  TLSClient.cpp  UDPClient.cpp
Util/src/Net/Websocket/: WebsocketClient.cpp  WebsocketMessage.cpp
Util/test/: Main.cpp
scripts/: build_wx.sh
src/: Config.cpp  Config.hpp  Main.cpp
src/Discord/: Bot.cpp  Bot.hpp
src/Model/: Song.cpp  Song.hpp  SongDatabase.cpp  SongDatabase.hpp  Sound.cpp  Sound.hpp  SoundDatabase.cpp  SoundDatabase.hpp  SoundPlayer.cpp  SoundPlayer.hpp
src/UI/: ChannelSelector.cpp  ChannelSelector.hpp  MainWindow.cpp  MainWindow.hpp  MusicPanel.cpp  MusicPanel.hpp
src/UI/Events/: BotInitialisedEvent.hpp  BotStartedRunningEvent.hpp  BotStoppedRunningEvent.hpp  ConnectToVoice.cpp  ConnectToVoice.hpp  ConnectedToVoice.cpp  ConnectedToVoice.hpp  DisconnectFromVoice.cpp  DisconnectFromVoice.hpp  DisconnectedFromVoice.cpp  DisconnectedFromVoice.hpp  GuildCreated.cpp  GuildCreated.hpp
src/UI/Model/: Song.cpp  Song.hpp  SongDatabase.cpp  SongDatabase.hpp  Sound.cpp  Sound.hpp  SoundDatabase.cpp  SoundDatabase.hpp
src/UI/Panels/: ChannelSelector.cpp  ChannelSelector.hpp  MusicPanel.cpp  MusicPanel.hpp  NowPlayingPanel.cpp  NowPlayingPanel.hpp  SearchTreeNavigator.cpp  SongDatabaseListContentsManager.hpp  SoundControlPanel.cpp  SoundControlPanel.hpp  SoundEffectsPanel.cpp  SoundEffectsPanel.hpp
